vlib/v/checker/tests/generic_fn_var_unresolved_err.vv
module main

fn func[T](arg string, mut val T) int {
	return 2
}

fn main() {
	_ := func
	_ := {
		'test': func
	}
}
